# YSUProject

./: LICENSE  README.md
CPP/: README.md
CPP/CPPCD/: CMakeLists.txt  YunaPlayer.qmlproject  YunaPlayer.qmlproject.qtds  YunaPlayer.qrc  qmlmodules
CPP/CPPCD/content/: App.qml  CMakeLists.txt  Screen01.qml  Screen01.ui.qml  Screen02.qml  Screen02.ui.qml  Screen02.ui.qml.autosave
CPP/CPPCD/imports/: CMakeLists.txt
CPP/CPPCD/imports/YunaPlayer/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  Theme.qml  qmldir
CPP/CPPCD/imports/YunaPlayer/designer/: plugin.metainfo
CPP/CPPCD/imports/bpptable/: CMakeLists.txt  CellClicker.qml  CompGrid.qml
CPP/CPPCD/src/: Manage.cpp  Manage.h  MediaPlayer.cpp  MediaPlayer.h  SList.h  app_environment.h  import_qml_plugins.h  main.cpp
CPP/CPPTP/: CMakeLists.txt  MainUI.cpp  MainUI.h  SList.h  SSet.h  SSetting.cpp  SSetting.h  SStack.h  classcard.cpp  classcard.h  classcard.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.ui  studentwindow.cpp  studentwindow.h  studentwindow.ui
CPP/CPPTP/test/: SListTest.cpp  SSetTest.cpp  SStackTest.cpp
CProgramLanguage/: README.md  ThirdProject.c  project.c
SQL/: README.md
SQL/hw01/: README.md
